--- a/src/app/components/skill-editor/skill-editor.component.html
+++ b/src/app/components/skill-editor/skill-editor.component.html
@@ -1,8 +1,18 @@
 <mat-card *ngIf="(selectedSkilltree$ | async) as skilltree" class="spacer-b-1em">
   <mat-form-field>
     <mat-select placeholder="Select Skill" [(ngModel)]="selectedSkill" (change)="switchSkill($event)">
+      <mat-select-trigger>
+        <span *ngIf="selectedSkill">
+          <img [src]="'assets/img/skills/' +  selectedSkill.icon" class="matl-chip__skill">
+          &nbsp;{{ selectedSkill.name }}
+        </span>
+      </mat-select-trigger>
       <mat-option *ngFor="let skill of skills" [value]="skill">
-        <img [src]="'assets/img/skills/' +  skill.icon" class="matl-chip__skill"> {{ skill.name }}
+        <img [src]="'assets/img/skills/' +  skill.icon" class="matl-chip__skill">
+        &nbsp;{{ skill.name }}
+        <span *ngIf="(selectedSkilltree$ | async).skills[skill.name]?.length > 0"
+              [matBadge]="(selectedSkilltree$ | async).skills[skill.name]?.length" matBadgePosition="after"
+              matBadgeColor="primary">&nbsp;&nbsp;</span>
       </mat-option>
     </mat-select>
   </mat-form-field>
