--- a/src/app/components/skills/fire-skill/fire-skill.component.scss
+++ b/src/app/components/skills/fire-skill/fire-skill.component.scss
@@ -1,3 +1,9 @@
-.bla.mat-input-wrapper {
-  margin-bottom: 0 !important;
+.mat-card {
+  margin-top: 10px;
+}
+
+@media screen and (min-width: 960px) {
+  .mat-card {
+    margin-right: 10px;
+  }
 }
