--- a/src/app/components/skills/heal-skill/heal-skill.component.html
+++ b/src/app/components/skills/heal-skill/heal-skill.component.html
@@ -32,7 +32,7 @@
 
   <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Heal; trackBy: id">
     <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
-    <div>
+    <mat-card>
       <mat-input-container>
         <input matInput placeholder="Timer" [value]="upgrade.timer ? upgrade.timer : 0" type="text"
                pattern="[+-=][0-9]+"
@@ -42,8 +42,8 @@
       <button mat-icon-button [satPopoverAnchorFor]="timerPopover" (click)="timerPopover.toggle()">
         <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
-    </div>
-    <div>
+    </mat-card>
+    <mat-card>
       <mat-input-container>
         <input matInput placeholder="Added Health" [value]="upgrade.health ? upgrade.health : 0" type="text"
                pattern="[+-=][0-9]+(\.[0-9]+)?"
@@ -53,6 +53,6 @@
       <button mat-icon-button [satPopoverAnchorFor]="healthPopover" (click)="healthPopover.toggle()">
         <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
-    </div>
+    </mat-card>
   </mat-expansion-panel>
 </div>
