--- a/src/app/components/skills/knockback-skill/knockback-skill.component.html
+++ b/src/app/components/skills/knockback-skill/knockback-skill.component.html
@@ -19,7 +19,7 @@
 
   <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Knockback; trackBy: id">
     <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
-    <div>
+    <mat-card>
       <mat-input-container>
         <input matInput placeholder="Chance" [value]="upgrade.chance ? upgrade.chance : 0" type="text"
                pattern="[+-=](?:[0-9]|[1-9][0-9]|100)"
@@ -29,6 +29,6 @@
       <button mat-icon-button [satPopoverAnchorFor]="chancePopover" (click)="chancePopover.toggle()">
         <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
-    </div>
+    </mat-card>
   </mat-expansion-panel>
 </div>
