--- a/src/app/components/skills/pickup-skill/pickup-skill.component.html
+++ b/src/app/components/skills/pickup-skill/pickup-skill.component.html
@@ -19,7 +19,7 @@
 
   <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Pickup; trackBy: id">
     <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
-    <div>
+    <mat-card>
       <mat-input-container>
         <input matInput placeholder="Range" [value]="upgrade.range ? upgrade.range : 0" type="text"
                pattern="[+-=][0-9]+(\.[0-9]+)?"
@@ -29,20 +29,15 @@
       <button mat-icon-button [satPopoverAnchorFor]="rangePopover" (click)="rangePopover.toggle()">
         <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
-    </div>
-    <div>
-      <mat-button-toggle-group [value]="null || upgrade.exp" (change)="update(skilltree, upgrade, 'exp', $event.value)">
-        <mat-button-toggle [value]="true" matTooltip="Yes">
-          <mat-icon svgIcon="check_box">check_box</mat-icon>
-        </mat-button-toggle>
-        <mat-button-toggle [value]="null" matTooltip="Don't change">
-          <mat-icon svgIcon="indeterminate_check_box">indeterminate_check_box</mat-icon>
-        </mat-button-toggle>
-        <mat-button-toggle [value]="false" matTooltip="No">
-          <mat-icon svgIcon="check_box_outline_blank">check_box_outline_blank</mat-icon>
-        </mat-button-toggle>
-      </mat-button-toggle-group>
-      <span>Can pick up exp?</span>
-    </div>
+    </mat-card>
+    <mat-card>
+      <mat-checkbox [checked]="upgrade.exp == true"
+                    [indeterminate]="upgrade.exp == null"
+                    (click)="toggle(skilltree, upgrade, 'exp')"
+                    [matTooltip]="upgrade.exp == true ? 'Yes' : (upgrade.exp == false ? 'No' : 'Don\'t change')"
+                    matTooltipPosition="right">
+        Can pick up exp?
+      </mat-checkbox>
+    </mat-card>
   </mat-expansion-panel>
 </div>
