--- a/src/app/components/skills/wither-skill/wither-skill.component.html
+++ b/src/app/components/skills/wither-skill/wither-skill.component.html
@@ -32,7 +32,7 @@
 
   <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Wither; trackBy: id">
     <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
-    <div>
+    <mat-card>
       <mat-input-container>
         <input matInput placeholder="Chance" [value]="upgrade.chance ? upgrade.chance : 0" type="text"
                pattern="[+-=](?:[0-9]|[1-9][0-9]|100)"
@@ -42,8 +42,8 @@
       <button mat-icon-button [satPopoverAnchorFor]="chancePopover" (click)="chancePopover.toggle()">
         <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
-    </div>
-    <div>
+    </mat-card>
+    <mat-card>
       <mat-input-container>
         <input matInput placeholder="Duration" [value]="upgrade.duration ? upgrade.duration : 0" type="text"
                pattern="[+-=][0-9]+"
@@ -53,6 +53,6 @@
       <button mat-icon-button [satPopoverAnchorFor]="durationPopover" (click)="durationPopover.toggle()">
         <mat-icon svgIcon="info_outline">info_outline</mat-icon>
       </button>
-    </div>
+    </mat-card>
   </mat-expansion-panel>
 </div>
