prevent upgrade panels from closing when changing a value

--- a/src/app/components/skills/backpack-skill/backpack-skill.component.html
+++ b/src/app/components/skills/backpack-skill/backpack-skill.component.html
@@ -18,31 +18,31 @@
   </sat-popover>
 
   <mat-accordion>
-    <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Backpack; trackBy: id>
+    <mat-expansion-panel *ngFor="let upgrade of skilltree.skills.Backpack; trackBy: id; let i = index"
+                         [expanded]="selectedUpgrade == i" (opened)="selectedUpgrade = i">
       <mat-expansion-panel-header>{{LevelRule.toString(upgrade.rule)}}</mat-expansion-panel-header>
-      <div fxLayout.md=" row wrap
-    " fxLayout="column">
-    <mat-card>
-      <mat-input-container>
-        <input matInput placeholder="Rows" [value]="upgrade.rows ? upgrade.rows : 0" type="text"
-               pattern="[+-=][0-9]+"
-               (blur)="update(skilltree, upgrade, 'rows', $event.srcElement.value)">
-        <span matSuffix>rows</span>
-      </mat-input-container>
-      <button mat-icon-button [satPopoverAnchorFor]="rowsPopover" (click)="rowsPopover.toggle()">
-        <mat-icon svgIcon="info_outline">info_outline</mat-icon>
-      </button>
-    </mat-card>
-    <mat-card>
-      <mat-checkbox [checked]="upgrade.drop == true"
-                    [indeterminate]="upgrade.drop == null"
-                    (click)="toggle(skilltree, upgrade, 'drop')"
-                    [matTooltip]="upgrade.drop == true ? 'Yes' : (upgrade.drop == false ? 'No' : 'Don\'t change')"
-                    matTooltipPosition="right">
-        Drop content on death?
-      </mat-checkbox>
-    </mat-card>
-</div>
-</mat-expansion-panel>
-</mat-accordion>
+      <div fxLayout.md=" row wrap" fxLayout="column">
+        <mat-card>
+          <mat-input-container>
+            <input matInput placeholder="Rows" [value]="upgrade.rows ? upgrade.rows : 0" type="text"
+                   pattern="[+-=][0-9]+"
+                   (blur)="update(skilltree, upgrade, 'rows', $event.srcElement.value)">
+            <span matSuffix>rows</span>
+          </mat-input-container>
+          <button mat-icon-button [satPopoverAnchorFor]="rowsPopover" (click)="rowsPopover.toggle()">
+            <mat-icon svgIcon="info_outline">info_outline</mat-icon>
+          </button>
+        </mat-card>
+        <mat-card>
+          <mat-checkbox [checked]="upgrade.drop == true"
+                        [indeterminate]="upgrade.drop == null"
+                        (click)="toggle(skilltree, upgrade, 'drop')"
+                        [matTooltip]="upgrade.drop == true ? 'Yes' : (upgrade.drop == false ? 'No' : 'Don\'t change')"
+                        matTooltipPosition="right">
+            Drop content on death?
+          </mat-checkbox>
+        </mat-card>
+      </div>
+    </mat-expansion-panel>
+  </mat-accordion>
 </div>
